--- a/analyse/ISSTA/2021.md
+++ b/analyse/ISSTA/2021.md
@@ -5,7 +5,7 @@
 
 256 different keywords after merging
 
-![figure1](../jupyter/ISSTA/issta_2021_accepted_wordcloud.pdf)
+![figure1](../jupyter/ISSTA/issta_2021_accepted_wordcloud.png)
 
 ##  ISSTA 2021 Paper Keywords Statistics
 
@@ -13,7 +13,7 @@ Most of the top keywords
 
 ['testing', 'test', 'deep', 'android', 'system', 'via', 'learning', 'symbolic', 'execution', 'space']
  
-![fgure2](../jupyter/ISSTA/issta_2021_submission_top100.pdf)
+![fgure2](../jupyter/ISSTA/issta_2021_acceptted_top100.png)
 
 * Test in Android
 * test deep learning method
